--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
 *.class
 *.log
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+*.class
+**/.DS_Store
+.DS_Store
+.sbt
+.bsp
+.history
+.cache-main
+.scala_dependencies
+publish.sbt
+target/
+generated/
+project/project/
+project/target/
